--- a/bài thực hành Lab01 - Nguyễn Hữu Đức/lab01.html
+++ b/bài thực hành Lab01 - Nguyễn Hữu Đức/lab01.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Lab01</title>
-		<link rel="stylesheet" type="text/css" href="test.css">
+		<link rel="stylesheet" type="text/css" href="Lab01.css">
 	</head>
 	<body>
 		<nav></nav>
