--- a/Đồ án tốt nghiệp/web/index.html
+++ b/Đồ án tốt nghiệp/web/index.html
@@ -20,15 +20,16 @@
       <div>
         <form class="form-login" action="index.html" method="post">
           <div class="content-form">
+            <img src="img/logo.png" alt="" class="logo-login">
+            <hr>
+            <div class="title-login">ĐĂNG NHẬP</div>
             <div class="form-group">
-              <label for="">Tài khoản: <input type="text" class="form-control" placeholder="Tài khoản" required></label>
+              <input type="text" class="form-control" placeholder="Tài khoản" required>
             </div>
             <div class="form-group">
-              <label for="">Mật khẩu: <input type="password" class="form-control" placeholder="Mật khẩu" required></label>
+              <input type="password" class="form-control" placeholder="Mật khẩu" required>
             </div>
-            <div class="checkbox">
-              <label><input type="checkbox">Lưu mật khẩu</label>
-            </div>
+            <a href="" class="button-signup">Đăng ký</a>
           </div>
         </form>
       </div>
